First pass at packaging.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-*.pyc
-.*.sw[m-z]
-*.egg-info/
+*.egg-info
+*.iml
+*.py[co]
+.*.sw[a-z]
+.coverage
+.idea
+.project
+.pydevproject
+.tox
+.venv.touch
+/venv*
+coverage-html
+dist
