--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-# command to install dependencies
+env: # These should match the tox env list
+    - TOXENV=py26
+    - TOXENV=py27
 install:
-  - "pip install ."
-  - "pip install -e .[javascript,cheetah]"
-  - "npm install reflect"
-# command to run tests
-script: py.test -rsx --runxfail
+    - pip install coveralls tox --use-mirrors
+    - npm install reflect
+script: tox
+after_success:
+    - coveralls
