--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands =
     coverage erase
     coverage run -m pytest {[tox]project}
     coverage report --show-missing --fail-under 90
-#    flake8 {[tox]project} setup.py
+    flake8 {[tox]project} setup.py
 #    pylint {[tox]project} setup.py
 
 [testenv:venv]
@@ -24,3 +24,6 @@ deps =
     sphinx
 changedir = docs
 commands = sphinx-build -b html -d build/doctrees source build/html
+
+[flake8]
+max-line-length = 131
