--- a/tox.ini
+++ b/tox.ini
@@ -27,3 +27,4 @@ commands = sphinx-build -b html -d build/doctrees source build/html
 
 [flake8]
 max-line-length = 131
+exclude = refactorlib/tests/python/parse_data/
