--- a/tox.ini
+++ b/tox.ini
@@ -28,3 +28,6 @@ commands = sphinx-build -b html -d build/doctrees source build/html
 [flake8]
 max-line-length = 131
 exclude = tests/python/parse_data/
+
+[pep8]
+ignore = E265,E309,E501
