--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,15 @@ language: python
 env: # These should match the tox env list
     - TOXENV=py26
     - TOXENV=py27
+    - TOXENV=py34
 install:
-    - pip install coveralls tox --use-mirrors
+    - pip install coveralls tox
     - npm install reflect
 script: tox
 after_success:
     - coveralls
 sudo: false
+cache:
+    directories:
+        - $HOME/.cache/pip
+        - $HOME/.pre-commit
