--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 project = refactorlib
 # These should match the travis env list
-envlist = py26,py27
+envlist = py26,py27,py34
 skipsdist = true
 
 [testenv]
-install_command = pip install --use-wheel {opts} {packages}
 deps = -rrequirements-dev.txt
 commands =
     coverage erase
