--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 project = refactorlib
 # These should match the travis env list
-envlist = py26,py27,py34
+envlist = py27,py34
 skipsdist = true
 
 [testenv]
 deps = -rrequirements-dev.txt
+passenv = NODE_PATH NPM_CONFIG_PREFIX npm_config_prefix
 commands =
     coverage erase
     coverage run -m pytest {posargs:tests}
