--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
+python: 3.5
 env: # These should match the tox env list
     - TOXENV=py27
     - TOXENV=py34
+    - TOXENV=py35
 install:
     - pip install coveralls tox
     - npm install reflect
 script: tox
-after_success:
-    - coveralls
-sudo: false
+after_success: coveralls
 cache:
     directories:
         - $HOME/.cache/pip
