--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 project = refactorlib
 # These should match the travis env list
-envlist = py27,py34
+envlist = py27,py34,py35
 skipsdist = true
 
 [testenv]
