Update pre-commit cache directory.
Committed via https://github.com/asottile/all-repos

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ after_success: coveralls
 cache:
     directories:
         - $HOME/.cache/pip
-        - $HOME/.pre-commit
+        - $HOME/.cache/pre-commit
