--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,17 @@
 [tox]
 project = refactorlib
-# These should match the travis env list
-envlist = py27,py34,py35
-skipsdist = true
+# These should match the github actions env list
+envlist = py37,py38,py39,py310
 
 [testenv]
 deps = -rrequirements-dev.txt
+extras = cheetah
 passenv = NODE_PATH NPM_CONFIG_PREFIX npm_config_prefix
 commands =
     coverage erase
     coverage run -m pytest {posargs:tests}
     coverage report --show-missing --fail-under 90
     flake8 {[tox]project} testing tests setup.py
-#    pylint {[tox]project} testing tests setup.py
-
-[testenv:venv]
-envdir = venv-{[tox]project}
-commands =
-
-[testenv:docs]
-deps =
-    {[testenv]deps}
-    sphinx
-changedir = docs
-commands = sphinx-build -b html -d build/doctrees source build/html
 
 [flake8]
 max-line-length = 131
