--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,10 @@ repos:
     rev: v1.6.0
     hooks:
     -   id: autopep8
+-   repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.20.0
+    hooks:
+    -   id: setup-cfg-fmt
 -   repo: https://github.com/pycqa/flake8
     rev: 4.0.1
     hooks:
