--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,56 @@
+[metadata]
+name = refactorlib
+version = attr: refactorlib.__version__
+description = A library to help automate refactoring
+long_description = file: README.markdown
+long_description_content_type = text/markdown
+url = http://github.com/bukzor/RefactorLib/
+author = Buck Golemon
+author_email = buck@yelp.com
+license = BSD
+platforms = any
+classifiers =
+    Development Status :: 1 - Planning
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: Implementation :: CPython
+    Topic :: Software Development :: Libraries :: Python Modules
+
+[options]
+packages = find:
+install_requires =
+    cached-property
+    lxml>=2.2
+    six
+python_requires = >=3.7
+
+[options.packages.find]
+exclude =
+    tests*
+    testing*
+
+[options.entry_points]
+console_scripts =
+    xmlfrom = refactorlib.cli.xmlfrom:cli
+    xmlstrip = refactorlib.cli.xmlstrip:cli
+
+[options.extras_require]
+cheetah =
+    yelp-cheetah>=0.19.0,<=0.19.999
+
+[options.package_data]
+refactorlib =
+    javascript/reflectjs.js
+
 [bdist_wheel]
 universal = True
 
