--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = refactorlib
 version = attr: refactorlib.__version__
 description = A library to help automate refactoring
-long_description = file: README.markdown
+long_description = file: README.md
 long_description_content_type = text/markdown
 url = http://github.com/bukzor/RefactorLib/
 author = Buck Golemon
